# overloaded-records

./: .gitignore  .travis.yml  ChangeLog.md  LICENSE  README.md  overloaded-records.cabal  stack-ghc-8.sh  stack-lts-5-transformers-0.5.yaml  stack-lts-5.5-transformers-0.5.yaml  stack-lts-5.5.yaml  stack-lts-5.yaml  stack-lts-6.yaml  stack-lts-7.yaml  stack-lts-8.yaml  stack-nightly.yaml
src/Data/: OverloadedLabels.hs  OverloadedRecords.hs
src/Data/OverloadedLabels/: TH.hs
src/Data/OverloadedRecords/: TH.hs
src/Data/OverloadedRecords/TH/: Internal.hs
test/: TestCase.hs  unit-tests.hs
test/TestCase/Data/: OverloadedRecords.hs
