name:                   overloaded-records
version:                0.1.0.0
synopsis:               Overloaded records
-- description:
homepage:               https://github.com/trskop/overloaded-records
license:                BSD3
license-file:           LICENSE
author:                 Peter Trško
maintainer:             peter.trsko@gmail.com
copyright:
category:               Data
build-type:             Simple
cabal-version:          >=1.10

-- extra-source-files:

library
  hs-source-dirs:       src
  exposed-modules:
      Data.OverloadedLabels
    , Data.OverloadedLabels.TH
    , Data.OverloadedRecords
    , Data.OverloadedRecords.TH
  -- other-modules:

  default-language:    Haskell2010
  other-extensions:
      CPP
    , DataKinds
    , ExplicitForAll
    , FlexibleContexts
    , FlexibleInstances
    , FunctionalDependencies
    , KindSignatures
    , MagicHash
    , MultiParamTypeClasses
    , NoImplicitPrelude
    , RankNTypes
    , TemplateHaskell
    , TypeFamilies
    , UndecidableInstances

  build-depends:
      base >=4.8 && <5
    , data-default-class ==0.0.*
    , template-haskell >=2.10 && <2.12

  if impl(ghc >=8.0)
    cpp-options:        -DHAVE_MONAD_FAIL

  ghc-options:          -Wall
